# rubberband

./: .travis.yml  README.md  rubberband.cabal  stack.yaml
homebrew/: rubberband-1.8.1-yosemite.diff  rubberband.rb
src/Sound/: RubberBand.hs
src/Sound/RubberBand/: Nice.hs  Option.hs  Raw.chs
wavstretch/: Main.hs  wavstretch.cabal
