name:                rubberband
version:             0.1.0.0
synopsis:            Binding to the C++ audio stretching library Rubber Band
license:             GPL-3
license-file:        LICENSE
author:              Michael Tolly
maintainer:          miketolly@gmail.com
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Sound.RubberBand.Raw
                       Sound.RubberBand.Nice
                       Sound.RubberBand.Option
  build-depends:       base >= 4.7 && < 4.8, vector >= 0.10.9 && < 0.11
  hs-source-dirs:      src
  default-language:    Haskell2010
  includes:            rubberband/rubberband-c.h
  extra-libraries:     rubberband
  ghc-options:         -Wall

executable wavstretch
  hs-source-dirs:      wavstretch
  main-is:             Main.hs
  build-depends:       base
                       , rubberband
                       , WAVE
                       , vector >= 0.10.9 && < 0.11
  default-language:    Haskell2010
  ghc-options:         -Wall
