name:                wavstretch
version:             0.1
synopsis:            Demonstration of the rubberband library
license:             GPL-3
license-file:        LICENSE
author:              Michael Tolly
maintainer:          miketolly@gmail.com
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

executable wavstretch
  main-is:             Main.hs
  build-depends:       base              >= 4.6    && < 5
                       , vector          >= 0.10.9 && < 0.13
                       , hsndfile        >= 0.7.1  && < 0.9
                       , hsndfile-vector >= 0.5.2  && < 0.6
                       , rubberband      == 0.1.0.2
  default-language:    Haskell2010
  ghc-options:         -Wall
